finished project the way it was supposed to be done, going to look at refactoring code in the future to make it DRYer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,31 @@
     <title>Basketball Scoreboard</title>
 </head>
 <body>
-    <h1>Hello, World!</h1>
+    <div class="container">
+        <div class="home-container">
+            <h1>HOME</h1>
+            <div class="score">
+                <p id="home-score" class="score-total"></p>
+            </div>
+            <div class="buttons">
+                <button onclick="hAdd1()" id="hBtn1">+1</button>
+                <button onclick="hAdd2()">+2</button>
+                <button onclick="hAdd3()">+3</button>
+            </div>
+        </div>
+
+        <div class="away-container">
+            <h1>AWAY</h1>
+            <div class="score">
+                <p id="away-score" class="score-total"></p>
+            </div>
+            <div class="buttons">
+                <button onclick="aAdd1()" id="aBtn1">+1</button>
+                <button onclick="aAdd2()">+2</button>
+                <button onclick="aAdd3()">+3</button>
+            </div>
+        </div>
+    </div>
+    <script src="/index.js"></script>
 </body>
 </html>
