--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <p id="home-score" class="score-total"></p>
             </div>
             <div class="buttons">
-                <button onclick="hAdd1()" id="hBtn1">+1</button>
+                <button onclick="hAdd1()">+1</button>
                 <button onclick="hAdd2()">+2</button>
                 <button onclick="hAdd3()">+3</button>
             </div>
@@ -26,7 +26,7 @@
                 <p id="away-score" class="score-total"></p>
             </div>
             <div class="buttons">
-                <button onclick="aAdd1()" id="aBtn1">+1</button>
+                <button onclick="aAdd1()">+1</button>
                 <button onclick="aAdd2()">+2</button>
                 <button onclick="aAdd3()">+3</button>
             </div>
